<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reph_lLayout"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView android:id="@+id/reph_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/reph_tv_company_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_vehicle"
                android:background="@drawable/rect_ash_stroke_nc_single_line"
                android:textColor="#d0d0d0"
                android:padding="12dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAllCaps="false" />

            <TextView android:id="@+id/reph_tv_own_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/own_vehicle"
                android:background="@drawable/rect_accent_stroke_nc_single_bg"
                android:textColor="@color/colorAccent"
                android:padding="12dp"
                android:gravity="left"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

    <TextView android:id="@+id/reph_tv_approval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pending_approval"
        android:textColor="#df1a1a"
        android:gravity="right"
        android:textSize="10sp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        android:layout_marginBottom="12dp"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d0d0d0" />

</LinearLayout>