<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="4dp">

    <ImageView android:id="@+id/ad_bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_gravity="right"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:background="@drawable/rect_ash_stroke"/>


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="16dp">

        <Button android:id="@+id/ad_bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@drawable/rect_stroke_accent_bg"
            android:textColor="@color/colorAccent"
            android:layout_margin="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/rect_stroke_accent_bg"
            android:textColor="@color/colorAccent"
            android:layout_margin="16dp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>