<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:padding="24dp">

    <TextView android:id="@+id/al_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Employee Transportation"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="24dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:fontFamily="sans-serif-smallcaps"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:paddingTop="34dp">

        <EditText android:id="@+id/am_et_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorBlack"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:fontFamily="sans-serif-smallcaps"/>
        <EditText android:id="@+id/am_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorBlack"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:fontFamily="sans-serif-smallcaps"/>
        <Button android:id="@+id/am_bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@drawable/rect_solid_accent_bg"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:fontFamily="sans-serif-smallcaps"/>

    </LinearLayout>

        </LinearLayout>

</LinearLayout>