<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/atc_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_in_progress"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:padding="12dp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView android:id="@+id/atc_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rect_white_stroke_bg"
            android:gravity="center"
            android:padding="6dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/atc_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:id="@+id/atc_ll_cont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rect_light_bg"
            android:padding="6dp"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/car_image"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>
            <View android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#424242"/>
            <TextView
                android:id="@+id/atc_tv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_loc"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"/>
        </LinearLayout>
    </RelativeLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment" />




</LinearLayout>